Revision history for perl distribution OpenAPI-Client

1.00 Not Released
 - Updated to use new JSON::Validator schema API

0.25 2020-06-30T18:45:37+0900
 - Fix setting correct request method on client errors

0.24 2019-05-05T14:36:11+0700
 - Fix t/command-local-with-ref.t

0.23 2019-05-05T14:13:14+0700
 - Add documentation for option --information|-I
 - Fix deprecation warning for JSON::Validator->coerce(1) #17
 - Fix printing YAML::XS::Boolean as "false" and "true" in dumped
   documentation
 - Printed documentation has $ref resolved
   Can be turned off with JSON_VALIDATOR_REPLACE=0

0.22 2019-01-25T14:45:56+0900
 - Updated documentation to use $client instead of $self

0.21 2018-10-03T16:19:00+0900
 - Fix failing tests after Mojolicious::Plugin::OpenAPI 2.00 #15

0.20 2018-09-30T22:04:20+0900
 - Fix skip tests when getting "Service Unavailable"

0.19 2018-09-26T13:56:14+0900
 - Skip tests when getting "Service Unavailable"

0.18 2018-09-02T14:13:51+0200
 - Add "after_build_tx" event
 - Add "opeartionId_p" methods for promise based API

0.17 2018-08-02T16:00:20+0800
 - Fix duplicate keys in test #13

0.16 2018-07-06T16:08:35+0800
 - Fix "host" can contain port #12

0.15 2018-02-15T22:35:36+0100
 - Require JSON::Validator 2.03

0.14 2017-12-23T17:10:22+0100
 - Add call_p() that returns a Mojo::Promise

0.13 2017-12-11T19:04:35+0100
 - Add default coercion to input parameters
 - Add call() for calling "invalid" operationIds names
 - Fix "openapi" client when printing data structures #8

0.12 2017-12-09T11:15:28+0100
 - Bumping dependencies

0.11 2017-12-08T14:57:01+0100
 - Fix openapi command will not try to decode empty strings #5
   Contributor: Ed J

0.10 2017-11-27T18:01:50+0100
 - Can resolve $ref in spec
 - Add support for inheriting "parameters"

0.09 2017-10-04T18:44:23+0200
 - Add pre_processor() which can be used to manipulate the request #2

0.08 2017-10-03T11:02:55+0200
 - Improved building default base_url() #1

0.07 2017-08-22T21:05:46+0200