@@ -1,5 +1,5 @@
 # You can install this project with curl -L http://cpanmin.us | perl - https://github.com/jhthorsen/openapi-client/archive/master.tar.gz
 requires 'Mojolicious::Plugin::OpenAPI' => '2.14';
-requires 'JSON::Validator'              => '4.13';
+requires 'JSON::Validator'              => '4.14';
 
 test_requires "Test::More" => "0.88";
