@@ -2,6 +2,8 @@ Revision history for perl distribution OpenAPI-Client
 
 1.00 Not Released
  - Updated to use new JSON::Validator schema API
+ - Add support for JSON::Validator::Schema::OpenAPIv3
+ - Removed pre_processor()
 
 0.25 2020-06-30T18:45:37+0900
  - Fix setting correct request method on client errors
